--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-meteor-client:local": "node_modules/.bin/meteor-client bundle --config bundler.config-local.json --destination src/meteor-bundles/meteor-client.local.js"
+    "bundle-meteor-client:local": "node_modules/.bin/meteor-client bundle --config bundler.config-local.json --destination src/meteor-bundles/meteor-client.local.js",
+    "bundle-meteor-client:server": "node_modules/.bin/meteor-client bundle --config bundler.config-server.json --destination src/meteor-bundles/meteor-client.server.js"
   },
   "private": true,
   "dependencies": {
